# BerkleyAPI_App

./: CMakeLists.txt  README.md  main.cpp
src/: socket.cpp  socket.h
src/client/: client.cpp  client.h
src/logger/: logger.cpp  logger.h
src/server/: exit_message_exception.h  no_numbers_exception.h  server.cpp  server.h
tests/server/: server_tests.cpp  server_tests.h
